--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="shortcut icon" href="#">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/devEloper-icon-03.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
