--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>devEloper</title>
     <link
       href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css"
       rel="stylesheet"
